@@ -45,11 +45,13 @@ public class SecurityConfig {
                     @Override
                     public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                         CorsConfiguration config = new CorsConfiguration();
-                        config.setAllowedOrigins(Collections.singletonList("http://localhost:9000"));
-                        config.setAllowedMethods(Collections.singletonList("*"));
+                        config.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
+                        //config.setAllowedMethods(Collections.singletonList("*"));
+                        config.setAllowedMethods(List.of("GET","POST","PUT","PATCH","POST","DELETE","OPTIONS"));
                         config.setAllowCredentials(true);
                         config.setExposedHeaders(List.of("Authorization"));
-                        config.setAllowedHeaders(Collections.singletonList("*"));
+                        //config.setAllowedHeaders(Collections.singletonList("*"));
+                        config.setAllowedHeaders(List.of("Content-Type"));
                         config.setMaxAge(3600L); //1시간
                         return config;
                     }
